# cyber-threat-detection-system

./: README.md
CyberShieldIntelligence/CyberShieldIntelligence/: README.md  XAMPP_SETUP_GUIDE.md  app.py  auth.py  config.py  crypto_utils.py  dependencies.txt  forms.py  log_analyzer.py  models.py  pyproject.toml  remediation.py  setup.py  threat_detection.py  utils.py
CyberShieldIntelligence/CyberShieldIntelligence/attached_assets/: Pasted-AI-Powered-Cyber-Threat-Detection-and-Automated-Remediation-System-Abstract-Cyber-threats-have-be-1743473862704.txt
CyberShieldIntelligence/CyberShieldIntelligence/instance/: cybersecurity.db
CyberShieldIntelligence/CyberShieldIntelligence/ml_models/: __init__.py  anomaly_detector.py  threat_classifier.py
CyberShieldIntelligence/CyberShieldIntelligence/static/css/: custom.css
CyberShieldIntelligence/CyberShieldIntelligence/static/js/: charts.js  dashboard.js
CyberShieldIntelligence/CyberShieldIntelligence/templates/: 404.html  500.html  dashboard.html  layout.html  login.html  logs.html  profile.html  register.html  remediation.html  remediation_history.html  settings.html  threat_details.html  threats.html
