[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crypto>=1.4.1",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pycryptodome>=3.22.0",
    "scikit-learn>=1.6.1",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.40",
    "wtforms>=3.2.1",
]
